two.js hello world works

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <div id="main"></div>
+
+    <script src="vendor/jquery/dist/jquery.js"></script>
+    <script src="vendor/two/build/two.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
