--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Chirrup</title>
+    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div id="main"></div>
 
+    <div id="controls">
+        <button class="btn btn-success" id="play">
+            <i class="glyphicon glyphicon-play"></i>
+        </button>
+    </div>
+
     <script src="vendor/jquery/dist/jquery.js"></script>
+    <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
     <script src="vendor/two/build/two.js"></script>
     <script src="js/main.js"></script>
 </body>
