--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div id="main"></div>
+    <div class="container">
+        <h1>Chirrup</h1>
+        <div id="main"></div>
 
-    <div id="controls">
-        <button class="btn btn-success" id="play">
-            <i class="glyphicon glyphicon-play"></i>
-        </button>
+        <div id="controls">
+            <button class="btn btn-default" id="reset">
+                <i class="glyphicon glyphicon-step-backward"></i>
+            </button>
+
+            <button class="btn btn-success" id="play">
+                <i class="glyphicon glyphicon-play"></i>
+            </button>
+        </div>
     </div>
 
     <script src="vendor/jquery/dist/jquery.js"></script>
