--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </button>
 
             <div class="form-group">
-                <input type="number" min="0" max="200" placeholder="Tempo" class="form-control" value="128.00">
+                <input id="tempo" type="number" min="0" max="200" placeholder="Tempo" class="form-control">
             </div>
         </form>
     </div>
