add preview toggle button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 <i class="glyphicon glyphicon-play"></i>
             </button>
 
+            <button class="btn btn-default" id="preview">
+                <i class="glyphicon glyphicon-headphones"></i>
+            </button>
+
             <div class="form-group">
                 <input id="tempo" type="number" min="0" max="200" placeholder="Tempo" class="form-control">
             </div>
