--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="container">
         <h1>Chirrup</h1>
+
+        <hr>
+
         <div id="main"></div>
 
         <form class="form-inline" id="controls">
@@ -28,6 +31,12 @@
                 <input id="tempo" type="number" min="0" max="200" placeholder="Tempo" class="form-control">
             </div>
         </form>
+
+        <hr>
+
+        <footer>
+            &copy; 2014 Giles Lavelle. Made for the Mubaloo Mobile Appathon.
+        </footer>
     </div>
 
     <script src="vendor/jquery/dist/jquery.js"></script>
