add clear button to remove all notes fixes #7

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div id="main"></div>
 
-        <form class="form-inline" id="controls">
+        <div class="form-inline" id="controls">
             <button class="btn btn-default" id="reset">
                 <i class="glyphicon glyphicon-step-backward"></i>
             </button>
@@ -25,6 +25,10 @@
 
             <button class="btn btn-default" id="preview">
                 <i class="glyphicon glyphicon-headphones"></i>
+            </button>
+
+            <button class="btn btn-danger" id="clear">
+                <i class="glyphicon glyphicon-remove"></i>
             </button>
 
             <div class="form-group">
