--- a/index.html
+++ b/index.html
@@ -31,6 +31,31 @@
                 <i class="glyphicon glyphicon-remove"></i>
             </button>
 
+            <button class="btn btn-warning" id="metronome">
+                <i class="glyphicon glyphicon-time"></i>
+            </button>
+
+            <button class="btn btn-default" id="quantize">
+                <!-- <i class="glyphicon glyphicon-time"></i> -->
+                <strong>Q</strong>
+            </button>
+
+            <button class="btn btn-default" id="undo">
+                <i class="glyphicon glyphicon-arrow-left"></i>
+            </button>
+
+            <button class="btn btn-default" id="redo">
+                <i class="glyphicon glyphicon-arrow-right"></i>
+            </button>
+
+            <button class="btn btn-default" id="open">
+                <i class="glyphicon glyphicon-open"></i>
+            </button>
+
+            <button class="btn btn-default" id="save">
+                <i class="glyphicon glyphicon-save"></i>
+            </button>
+
             <div class="form-group">
                 <input id="tempo" type="number" min="0" max="200" placeholder="Tempo" class="form-control">
             </div>
