--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
             <div class="form-group">
                 <input id="tempo" type="number" min="0" max="200" placeholder="Tempo" class="form-control">
             </div>
+
+            <div class="form-group">
+                <select class="form-control" id="mode">
+                    <option value="add">Add</option>
+                    <option value="resize">Resize</option>
+                    <option value="move">Move</option>
+                    <option value="group">Group</option>
+                </select>
+            </div>
         </form>
 
         <hr>
