--- a/index.html
+++ b/index.html
@@ -15,44 +15,44 @@
         <div id="main"></div>
 
         <div class="form-inline" id="controls">
-            <button class="btn btn-default" id="reset">
+            <button class="btn btn-default" id="reset" data-toggle="tooltip" data-placement="bottom" title="Reset">
                 <i class="glyphicon glyphicon-step-backward"></i>
             </button>
 
-            <button class="btn btn-success" id="play">
+            <button class="btn btn-success" id="play" data-toggle="tooltip" data-placement="bottom" title="Play">
                 <i class="glyphicon glyphicon-play"></i>
             </button>
 
-            <button class="btn btn-default" id="preview">
+            <button class="btn btn-default" id="preview" data-toggle="tooltip" data-placement="bottom" title="Toggle note preview">
                 <i class="glyphicon glyphicon-headphones"></i>
             </button>
 
-            <button class="btn btn-danger" id="clear">
+            <button class="btn btn-danger" id="clear" data-toggle="tooltip" data-placement="bottom" title="Clear all notes">
                 <i class="glyphicon glyphicon-remove"></i>
             </button>
 
-            <button class="btn btn-warning" id="metronome">
+            <button class="btn btn-warning" id="metronome" data-toggle="tooltip" data-placement="bottom" title="Toggle metronome">
                 <i class="glyphicon glyphicon-time"></i>
             </button>
 
-            <button class="btn btn-default" id="quantize">
+            <button class="btn btn-default" id="quantize" data-toggle="tooltip" data-placement="bottom" title="Toggle quantize">
                 <!-- <i class="glyphicon glyphicon-time"></i> -->
                 <strong>Q</strong>
             </button>
 
-            <button class="btn btn-default" id="undo">
+            <button class="btn btn-default" id="undo" data-toggle="tooltip" data-placement="bottom" title="Undo">
                 <i class="glyphicon glyphicon-arrow-left"></i>
             </button>
 
-            <button class="btn btn-default" id="redo">
+            <button class="btn btn-default" id="redo" data-toggle="tooltip" data-placement="bottom" title="Redo">
                 <i class="glyphicon glyphicon-arrow-right"></i>
             </button>
 
-            <button class="btn btn-default" id="open">
+            <button class="btn btn-default" id="open" data-toggle="tooltip" data-placement="bottom" title="Open file">
                 <i class="glyphicon glyphicon-open"></i>
             </button>
 
-            <button class="btn btn-default" id="save">
+            <button class="btn btn-default" id="save" data-toggle="tooltip" data-placement="bottom" title="Save file">
                 <i class="glyphicon glyphicon-save"></i>
             </button>
 
