fix tooltip padding #26

--- a/index.html
+++ b/index.html
@@ -15,44 +15,44 @@
         <div id="main"></div>
 
         <div class="form-inline" id="controls">
-            <button class="btn btn-default" id="reset" data-toggle="tooltip" data-placement="bottom" title="Reset">
+            <button class="btn btn-default" id="reset" data-toggle="tooltip" data-placement="bottom" title="Reset" data-container="#controls" data-container="#controls">
                 <i class="glyphicon glyphicon-step-backward"></i>
             </button>
 
-            <button class="btn btn-success" id="play" data-toggle="tooltip" data-placement="bottom" title="Play">
+            <button class="btn btn-success" id="play" data-toggle="tooltip" data-placement="bottom" title="Play" data-container="#controls">
                 <i class="glyphicon glyphicon-play"></i>
             </button>
 
-            <button class="btn btn-default" id="preview" data-toggle="tooltip" data-placement="bottom" title="Toggle note preview">
+            <button class="btn btn-default" id="preview" data-toggle="tooltip" data-placement="bottom" title="Toggle note preview" data-container="#controls">
                 <i class="glyphicon glyphicon-headphones"></i>
             </button>
 
-            <button class="btn btn-danger" id="clear" data-toggle="tooltip" data-placement="bottom" title="Clear all notes">
+            <button class="btn btn-danger" id="clear" data-toggle="tooltip" data-placement="bottom" title="Clear all notes" data-container="#controls">
                 <i class="glyphicon glyphicon-remove"></i>
             </button>
 
-            <button class="btn btn-warning" id="metronome" data-toggle="tooltip" data-placement="bottom" title="Toggle metronome">
+            <button class="btn btn-warning" id="metronome" data-toggle="tooltip" data-placement="bottom" title="Toggle metronome" data-container="#controls">
                 <i class="glyphicon glyphicon-time"></i>
             </button>
 
-            <button class="btn btn-default" id="quantize" data-toggle="tooltip" data-placement="bottom" title="Toggle quantize">
+            <button class="btn btn-default" id="quantize" data-toggle="tooltip" data-placement="bottom" title="Toggle quantize" data-container="#controls">
                 <!-- <i class="glyphicon glyphicon-time"></i> -->
                 <strong>Q</strong>
             </button>
 
-            <button class="btn btn-default" id="undo" data-toggle="tooltip" data-placement="bottom" title="Undo">
+            <button class="btn btn-default" id="undo" data-toggle="tooltip" data-placement="bottom" title="Undo" data-container="#controls">
                 <i class="glyphicon glyphicon-arrow-left"></i>
             </button>
 
-            <button class="btn btn-default" id="redo" data-toggle="tooltip" data-placement="bottom" title="Redo">
+            <button class="btn btn-default" id="redo" data-toggle="tooltip" data-placement="bottom" title="Redo" data-container="#controls">
                 <i class="glyphicon glyphicon-arrow-right"></i>
             </button>
 
-            <button class="btn btn-default" id="open" data-toggle="tooltip" data-placement="bottom" title="Open file">
+            <button class="btn btn-default" id="open" data-toggle="tooltip" data-placement="bottom" title="Open file" data-container="#controls">
                 <i class="glyphicon glyphicon-open"></i>
             </button>
 
-            <button class="btn btn-default" id="save" data-toggle="tooltip" data-placement="bottom" title="Save file">
+            <button class="btn btn-default" id="save" data-toggle="tooltip" data-placement="bottom" title="Save file" data-container="#controls">
                 <i class="glyphicon glyphicon-save"></i>
             </button>
 
