deleting works fixes #28

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <div class="form-group">
                 <select class="form-control" id="mode">
                     <option value="add">Add</option>
+                    <option value="remove">Remove</option>
                     <option value="resize">Resize</option>
                     <option value="move">Move</option>
                     <option value="group">Group</option>
