--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <header>
+        <nav id="topBanner" class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <ul class="nav navbar-nav">
+                <li>
+                    <img src="img/bird.png" alt="Chirrup Logo" id="logo">
+                </li>
+                <li>
+                    <h1>Chirrup</h1>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="container">
         <h1>Chirrup</h1>
 
