--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Chirrup</title>
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="/favicon.ico">
 </head>
 <body>
     <header>
