--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav id="topBanner" class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <nav id="topBanner" class="navbar navbar-default" role="navigation">
             <ul class="nav navbar-nav">
                 <li>
                     <img src="img/bird.png" alt="Chirrup Logo" id="logo">
@@ -22,10 +22,6 @@
     </header>
 
     <div class="container">
-        <h1>Chirrup</h1>
-
-        <hr>
-
         <div id="main"></div>
 
         <div class="form-inline" id="controls">
