--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <script src="vendor/jquery/dist/jquery.js"></script>
     <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
     <script src="vendor/two/build/two.js"></script>
-    <script src="vendor/timbre/timbre.dev.js"></script>
+    <script src="vendor/Audiolet/src/audiolet/Audiolet.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
