--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             </div>
 
             <div class="form-group">
+                <input id="filename" type="text" placeholder="Project name" class="form-control">
+            </div>
+
+            <div class="form-group">
                 <select class="form-control" id="mode">
                     <option value="add">Add</option>
                     <option value="remove">Remove</option>
