--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div class="container">
         <div id="main"></div>
 
+        <div class="clearfix"></div>
+
         <div class="form-inline" id="controls">
             <button class="btn btn-default" id="reset" data-toggle="tooltip" data-placement="bottom" title="Reset" data-container="#controls" data-container="#controls">
                 <i class="glyphicon glyphicon-step-backward"></i>
