--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <hr>
 
         <footer>
-            &copy; 2014 <a href="http://lavelle.co">Giles Lavelle.</a> Made for the <a href="https://www.facebook.com/events/1430431950527237/">Mubaloo Mobile Appathon</a>. Code on <a href="https://github.com/lavelle/chirrup">GitHub</a>
+            &copy; 2014 <a href="http://lavelle.co">Giles Lavelle.</a> Made for the <a href="https://www.facebook.com/events/1430431950527237/">Mubaloo Mobile Appathon</a>. Code on <a href="https://github.com/lavelle/chirrup">GitHub</a>.
         </footer>
     </div>
 
